--- a/ignitedminds.edu.css
+++ b/ignitedminds.edu.css
@@ -139,6 +139,7 @@
             font-size: 14px;
             border-radius: 5px;
             cursor: pointer;
+            align-items: start;
         }
         .language-btn:hover {
             background: #4047a1;
@@ -197,8 +198,8 @@
 
     /* i frame */
     .popup iframe {
-        width: 100%;
-        height: 85%;
+        width: 50%;
+        height: 100%;
         border: none;
     }   
       /* Responsive Design */
