--- a/ignitedminds.edu.css
+++ b/ignitedminds.edu.css
@@ -153,7 +153,7 @@ ul li {
 /* POPUP LOGIN FORM */
 .popup {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
